fixed signature not centering in div on firefox

--- a/src/stylesheets/components/Signature.module.sass
+++ b/src/stylesheets/components/Signature.module.sass
@@ -2,7 +2,6 @@
 
 .signature
   max-height: 34px
-  margin-top: 10px
   -webkit-transition: filter $colorTransitionDuration linear
   -moz-transition: filter $colorTransitionDuration linear
   transition: filter $colorTransitionDuration linear
